--- a/doich.tex
+++ b/doich.tex
@@ -20,7 +20,7 @@
 	\setcounter{MaxMatrixCols}{20}
 	\graphicspath{{pictures/}}
     \title{\textbf{Исследование возможности реализации алгоритма Дойча \\ -- \\ Investigation of the possibility of implementing the Deutsch – Jozsa's algorithm}}
-    \author{И.А.Юхновский, Ю.И.Аношкин}
+    \author{И.А.Юхновский}
     \date{сентябрь 2020}
     
 
