--- a/penning.tex
+++ b/penning.tex
@@ -21,7 +21,7 @@
 	\graphicspath{{pictures/}}
     \title{\textbf{Применение ловушки Пеннинга в исследовании возможности построения квантового компьютера на источниках ионизирующего излучения \\ -- \\ 
 The use of the Penning trap in the study of the possibility of building a quantum computer on a source of ionizing radiation }}
-    \author{И.А.Юхновский, Ю.И.Аношкин}
+    \author{И.А.Юхновский}
     \date{сентябрь 2020}
     
 
